--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "budget-allocation",
+  "homepage": "http://christophertasber.com/React_Redux_budget/
   "version": "0.1.0",
   "private": true,
   "dependencies": {
